[gd_scene load_steps=14 format=3 uid="uid://grxxm1lt7ly0"]

[ext_resource type="Script" uid="uid://cnrhby1u3al1x" path="res://scripts/GameManager.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://cu57x6wssxx3" path="res://assets/night_sky.png" id="2"]
[ext_resource type="Script" uid="uid://cm8pvvxouyqsn" path="res://scenes/background.gd" id="3_400sg"]
[ext_resource type="PackedScene" uid="uid://c2hh62ndqjhm4" path="res://scenes/Pipe.tscn" id="4"]
[ext_resource type="Script" uid="uid://qvx1msjdd4mo" path="res://scenes/pig.gd" id="4_3xj3m"]
[ext_resource type="Texture2D" uid="uid://b2beiyt4rhhow" path="res://assets/progress_grad.png" id="4_g4kob"]
[ext_resource type="Texture2D" uid="uid://dg84jyeati2dq" path="res://assets/pig.PNG" id="4_qy1jj"]
[ext_resource type="Script" uid="uid://b7lugwq3athc1" path="res://scenes/pipe.gd" id="4_s0nni"]
[ext_resource type="Texture2D" uid="uid://3c62hi7xm62a" path="res://assets/pipe.png" id="5_aug50"]
[ext_resource type="Script" uid="uid://1mcxqn5f3mwu" path="res://scenes/energy_bar.gd" id="5_qy1jj"]
[ext_resource type="Texture2D" uid="uid://k6uq822am8pp" path="res://assets/progress_under.png" id="6_3xj3m"]

[sub_resource type="CircleShape2D" id="CircleShape2D_3xj3m"]
radius = 751.669

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kiw3p"]
size = Vector2(117.50003, 597.5001)

[node name="Game" type="Node2D"]
script = ExtResource("1")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(9472.001, 324.5)
scale = Vector2(1.2675781, 1.2675781)
texture = ExtResource("2")
script = ExtResource("3_400sg")

[node name="Pig" type="CharacterBody2D" parent="."]
position = Vector2(200, 300)
script = ExtResource("4_3xj3m")

[node name="Sprite2D" type="Sprite2D" parent="Pig"]
position = Vector2(-58.999977, -2.499977)
scale = Vector2(0.078395024, 0.07839503)
texture = ExtResource("4_qy1jj")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pig"]
position = Vector2(-59, -1)
scale = Vector2(0.06790118, 0.06790119)
shape = SubResource("CircleShape2D_3xj3m")

[node name="EnergyBar" type="TextureProgressBar" parent="."]
offset_left = 54.0
offset_top = 558.0
offset_right = 454.0
offset_bottom = 582.0
value = 10.0
texture_under = ExtResource("6_3xj3m")
texture_progress = ExtResource("4_g4kob")
script = ExtResource("5_qy1jj")

[node name="GameOverLabel" type="Label" parent="."]
visible = false
offset_left = 200.0
offset_top = 200.0
offset_right = 200.0
offset_bottom = 200.0
text = "Game Over! Press R to Restart"

[node name="Pipe" parent="." groups=["pipe"] instance=ExtResource("4")]
script = ExtResource("4_s0nni")

[node name="Sprite2D" type="Sprite2D" parent="Pipe"]
position = Vector2(520, 120)
scale = Vector2(0.4, 0.4)
texture = ExtResource("5_aug50")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pipe"]
position = Vector2(519.5, 119.5)
scale = Vector2(0.39999986, 0.39999986)
shape = SubResource("RectangleShape2D_kiw3p")

[node name="PipeTimer" type="Timer" parent="Pipe"]
wait_time = 1.5
autostart = true

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(66, 25)
offset = Vector2(512, 300)

[connection signal="timeout" from="Pipe/PipeTimer" to="." method="_on_pipe_timer_timeout"]
